--- a/app/src/main/res/layout/activity_join_room.xml
+++ b/app/src/main/res/layout/activity_join_room.xml
@@ -8,27 +8,26 @@
     tools:context=".JoinRoom">
 
     <TextView
+        style="@style/TextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Enter Your Code"
-        android:textSize="30dp"
+        android:layout_marginLeft="80dp"
         android:layout_marginTop="100px"
-        android:layout_marginHorizontal="210px"/>
+        android:text="Enter Your Code" />
 
     <EditText
         android:id="@+id/user_code"
-        android:layout_margin="148px"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Your code"/>
+        android:layout_margin="148px"
+        android:hint="Your code" />
 
     <Button
         android:id="@+id/user_code_button"
-        android:textColor="#ffffffff"
-        android:layout_marginLeft="400px"
-        android:background="@color/colorPrimary"
+        style="@style/Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Enter"/>
+        android:layout_marginLeft="300px"
+        android:text="Enter" />
 
 </LinearLayout>
