--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,34 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:orientation="vertical"
-tools:context=".JoinRoom">
-
-<TextView
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="Enter Your Name"
-    android:textSize="30dp"
-    android:layout_marginTop="100px"
-    android:layout_marginHorizontal="200px"/>
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".JoinRoom">
 
-<EditText
-    android:id="@+id/user_name"
-    android:layout_margin="148px"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:hint="Your Name"/>
+    <TextView
+        style="@style/TextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="75dp"
+        android:layout_marginTop="100px"
+        android:text="Enter Your Name" />
 
-<Button
-    android:id="@+id/user_name_button"
-    android:textColor="#ffffffff"
-    android:layout_marginLeft="400px"
-    android:background="@color/colorPrimary"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Enter"/>
+    <EditText
+        android:id="@+id/user_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="148px"
+        android:hint="Your Name" />
+
+    <Button
+        android:id="@+id/user_name_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="300px"
+        android:background="@color/colorPrimary"
+        android:text="Enter"
+        android:textColor="#ffffffff" />
 
 </LinearLayout>
