--- a/app/src/main/res/layout/opening_activity.xml
+++ b/app/src/main/res/layout/opening_activity.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".MainActivity">
 
     <TextView
         style="@style/TextView"
@@ -15,14 +15,14 @@
         android:text="Enter Your Name" />
 
     <EditText
-        android:id="@+id/user_named"
+        android:id="@+id/user_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="148px"
         android:hint="Your Name" />
 
     <Button
-        android:id="@+id/user_named_button"
+        android:id="@+id/user_name_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="300px"
